Updating update checker to be based on config option.