@@ -1,5 +1,6 @@
 package com.wuest.prefab;
 
+import java.io.File;
 import java.io.IOException;
 import java.io.InputStreamReader;
 import java.net.MalformedURLException;
@@ -15,20 +16,21 @@ public class UpdateChecker
 	private static ModInfo modInfo = null;
 	public static boolean showMessage = false;
 	public static String messageToShow = "";
-	
+
 	public static void checkVersion()
 	{
 		UpdateChecker.getRepositoryVersion();
-		
+
 		if (UpdateChecker.modInfo != null)
 		{
+			UpdateChecker.messageToShow = "[Prefab] There is a new version available! [New Version: " + UpdateChecker.modInfo.version + "] [Your Version: "
+					+ Prefab.VERSION + "]";
+
 			if (!Prefab.VERSION.equals(modInfo.version))
 			{
 				// Old version, show a message;
-				UpdateChecker.messageToShow = "[Prefab] There is a new version available! [New Version: " 
-						+ UpdateChecker.modInfo.version + "] [Your Version: " + Prefab.VERSION + "]";
 				UpdateChecker.showMessage = true;
-				
+
 				System.out.println(UpdateChecker.messageToShow);
 			}
 			else
@@ -43,13 +45,23 @@ public class UpdateChecker
 			System.out.println("[Prefab] - " + UpdateChecker.messageToShow);
 		}
 	}
-	
+
 	private static void getRepositoryVersion()
 	{
 		try
 		{
 			System.out.println("[Prefab] - Checking for latest version.");
-			URL url = new URL("https://raw.githubusercontent.com/Brian-Wuest/MC-Prefab/master/src/main/resources/mcmod.info");
+			URL url = null;
+
+			if (Prefab.isDebug)
+			{
+				url = new File("C:\\Users\\Brian\\Documents\\GitHub\\MC-Prefab\\src\\main\\resources\\mcmod.info").toURI().toURL();
+			}
+			else
+			{
+				url = new URL("https://raw.githubusercontent.com/Brian-Wuest/MC-Prefab/master/src/main/resources/mcmod.info");
+			}
+
 			Gson file = new Gson();
 			InputStreamReader stream = new InputStreamReader(url.openStream(), "UTF-8");
 			ModInfo[] info = file.fromJson(stream, ModInfo[].class);
